--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,17 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    background-color: rgba(217, 217, 217, 0.30);
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+
+/* index.html = login sayfası ve register.html sayfasının css kodları */
+.index-body
+{
     display: flex;
     background-color: #5D1D88;
-    font-family: "Bai Jamjuree", sans-serif;
 }
 
 .left-side {
@@ -103,4 +111,124 @@ body {
     font-size: 50px;
     color: black;
     margin-bottom: 0;
+}
+
+
+/* index.html = login sayfası ve register.html sayfasının css kodları sonu*/
+
+
+
+
+/* navbar css*/
+.navbar{
+    width: 100%;
+    height: auto;
+}
+
+.navbar-container
+{
+    background-color: #5D1D88;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 4rem;
+    margin: auto;
+}
+
+.navbar-container img.logo {
+    margin-left: 2%;
+    max-width: 150px;
+    height: auto;
+}
+
+.navbar-container img.game-logo {
+    max-width: 100px;
+    height: 40px;
+}
+
+.navbar-container img.profile-img {
+    max-width: 40px;
+    height: auto;
+    margin-right: 2%;
+}
+
+/* navbar css son */
+
+
+/* board template css */
+
+.games-page
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.game-template
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+.board-template
+{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    height: 450px;
+    margin-top: 10%;
+    margin-left: 5%;
+    
+}
+.board-template h2
+{
+   margin-left : 5%;
+}
+
+.board
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #5D1D88;
+    border: 1px solid #5D1D88;
+    border-radius: 30px;
+}
+
+.question-mark
+{
+    display: flex;
+    max-height: 20%;
+}
+
+.board > * {
+    margin-left: 2%;
+    height: 100%; /* İçindeki öğelerin yüksekliği */
+    box-sizing: border-box; /* Padding ve border'ı yüksekliğe dahil etmek için */
+    margin-right: 2%;
+}
+
+.users-board
+{
+    display: flex;
+    max-width: 100vh;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.users
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    background-color: #5D1D88;
 }
