--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200&display=swap');
 
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
     background-color: rgba(217, 217, 217, 0.30);
     font-family: "Bai Jamjuree", sans-serif;
 }
@@ -118,11 +121,14 @@ body {
 
 
 
-
 /* navbar css*/
 .navbar{
     width: 100%;
-    height: auto;
+    height: auto; 
+    position: fixed;
+    top: 0; 
+    background-color: #5D1D88;
+    z-index: 1000;
 }
 
 .navbar-container
@@ -165,6 +171,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100vh; 
+    overflow-y: auto;
 }
 .game-template
 {
@@ -179,11 +187,9 @@ body {
 {
     display: flex;
     flex-direction: column;
-    width: 70%;
-    height: 450px;
-    margin-top: 10%;
-    margin-left: 5%;
-    
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 .board-template h2
 {
@@ -195,9 +201,33 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 120%;
+    padding: 5%;
+    background-color: #5D1D88;
+    border: 1px solid #5D1D88;
+    border-radius: 30px;
+}
+
+.board-column
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     background-color: #5D1D88;
     border: 1px solid #5D1D88;
+    border-radius: 30px;
+}
+
+.board a {
+    max-width: 100%;
+    max-height: 100%; 
+}
+
+.board img {
+    width: 100%;
+    height: auto;
     border-radius: 30px;
 }
 
@@ -207,28 +237,189 @@ body {
     max-height: 20%;
 }
 
-.board > * {
-    margin-left: 2%;
-    height: 100%; /* İçindeki öğelerin yüksekliği */
-    box-sizing: border-box; /* Padding ve border'ı yüksekliğe dahil etmek için */
-    margin-right: 2%;
-}
-
 .users-board
 {
     display: flex;
-    max-width: 100vh;
+    height: 70%;
+    padding: 0 5% 6% 5%;
+    margin-right: 2.5%;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: black;
+    border-radius: 40px;
+    color: white;
 }
 
-.users
+.users-board-settings
+{
+    display: flex;
+    height: 70%;
+    padding: 0 5% 6% 5%;
+    margin-right: 2.5%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #5D1D88;
+    border-radius: 40px;
+    color: white;
+}
+
+.users-board-settings img
+{
+    width: 30%;
+    height: auto;
+}
+
+.nick-create
+{
+    display: flex;
+    padding: 5%;
+    margin-top: 5%;
+    flex-direction: column;
+    border: 1px solid #5D1D88;
+    border-radius: 30px;
+    width: 100%;
+}
+
+.nick-create input
+{
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #FDB827;
+    margin-bottom: 15px;
+    font-size: 15px;
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+.nick-create button
+{
+    width: 100%;
+    margin-top: 3%;
+    padding: 10px;
+    align-items: center;
+    box-shadow: 0px -1.4782986640930176px 2.956597328186035px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-family: "Bai Jamjuree", sans-serif;
+    background: #5D1D88;
+    color: white;
+    cursor: pointer;
+}
+
+.user-settings-box {
+    width: 70%;
+    margin: 15%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+.user-settings-box h2 {
+    text-align: center;
+    color: #333;
+}
+
+
+
+.user-settings-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-settings-form label {
+    margin-top: 10px;
+    color: #5D1D88;
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+.user-settings-form input, select {
+    padding: 1.5%;
+    color:#5D1D88;
+    border-radius: 30px;
+    margin: 5px 0;
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+.settings-button {
+    margin-top: 5%;
+    font-family: "Bai Jamjuree", sans-serif;
+    background-color: #5D1D88;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgba(217, 217, 217, 0.30);
+    border: 2px solid #5D1D88;
+    color: #5D1D88;
+}
+
+
+.profile-page
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 100px;
+    height: 100vh; 
+    overflow-y: auto;
+}
+
+.match-board-settings
+{
+    display: flex;
+    height: 90%;
+    margin-right: 2.5%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 40px;
+    color: white;
+}
+
+.match-history-pong-info
+{
+    display: flex;
+    padding: 0 5% 6% 5%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     background-color: #5D1D88;
+    border: 1px solid #5D1D88;
+    border-radius: 30px;
+}
+
+.match-history-headortails-info
+{
+    display: flex;
+    padding: 0 5% 6% 5%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #5D1D88;
+    border: 1px solid #5D1D88;
+    border-radius: 30px;
+}
+
+.match-history-pong-info img
+{
+    width: 30%;
+    height: auto;
+}
+.match-history-headortails-info img
+{
+    width: 30%;
+    height: auto;
 }
