--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .right-side {
