--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     font-family: "Bai Jamjuree", sans-serif;
 }
 
-
+/* tahanın denemesi */
 /* index.html = login sayfası ve register.html sayfasının css kodları */
 .index-body
 {
