--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     padding:0;
     box-sizing:border-box
 }
-
+/*Burak degisiklik burada yapti*/
 body {
     background-color: rgba(217, 217, 217, 0.30);
     font-family: "Bai Jamjuree", sans-serif;
