--- a/spa/css/style.css
+++ b/spa/css/style.css
@@ -239,7 +239,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh; 
-    overflow-y: auto;
+   /*  overflow-y: auto; */
 }
 .game-template
 {
@@ -321,15 +321,15 @@ body {
 .users-board
 {
     display: flex;
-    height: 90%;
-    margin-right: 60%;
+    height: 60%;
+    margin-right: 6%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #9A9797;
     border-radius: 40px;
     color: #5D1D88;
-	padding: 3% 15% 5% 15%;
+	padding: 3% 5% 5% 5%;
 	margin-top: 30px; /* Üst kenara 20 piksel girinti ekleyin, ihtiyaca göre ayarlayabilirsiniz */
     margin-left: 30px;
     margin-bottom: 60px;
