--- a/spa/css/style.css
+++ b/spa/css/style.css
@@ -293,6 +293,10 @@ body {
 	padding-bottom: 10px;
 }
 
+.board-column img {
+	margin-bottom: 10px;
+}
+
 .board a {
     max-width: 100%;
     max-height: 100%; 
@@ -793,4 +797,12 @@ thead th {
 
 .statistics-row {
 	flex-direction: column;
+}
+
+.green-write {
+	color: #3BE200;
+	text-align: center; /* Metni yatayda ortala */
+    margin: auto; /* Metni dikeyde ortala */
+    /* İhtiyaca göre diğer stil özelliklerini ekleyebilirsiniz */
+	font-size: small;
 }
