--- a/spa/css/style.css
+++ b/spa/css/style.css
@@ -723,7 +723,7 @@ thead th {
 	flex-direction: column;
     border-radius: 25px; /* Köşe yarıçapını istediğiniz değere ayarlayın */
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    background-color: #9A9797; /* Gri rengi istediğiniz gri tonuyla değiştirin */
+    background-color: #abaaaa; /* Gri rengi istediğiniz gri tonuyla değiştirin */
 	justify-content: center;
 	align-items: center;
 	padding: 3% 5% 3% 5%;
@@ -778,19 +778,6 @@ thead th {
 	margin: 10px;
 	padding: 10px;
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-
-.btn-outline-warning {
-    height: 21px; /* İstenilen yüksekliği belirleyin */
-}
-
-.btn-outline-warning .btn-text {
-    font-size: 11px; /* İstenilen font büyüklüğünü belirleyin */
-    overflow: hidden; /* Metnin taşmasını önlemek için */
-    display: block; /* İçeriği blok seviyesine getirin */
-    max-width: 100%; /* İçeriği buton genişliği kadar sınırlayın */
-    min-height: 110%;
-	line-height: 0.9; /* line-height ekleyin */
 }
 
 .base-profil-line {
@@ -866,7 +853,6 @@ thead th {
 .table-top-photo img {
 	display: block;
 	margin: 0 auto;
-	
 }
 
 .users-board-settings {
@@ -876,3 +862,74 @@ thead th {
 	justify-content: center;
 	margin: 0 auto;
 }
+
+.onl-profile {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	font-family: "Bai Jamjuree", sans-serif;
+	margin-top: 0;
+    margin-bottom: 0;
+}
+
+.profile-buttons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin: 3%;
+	padding: 2%;
+}
+
+.profile-buttons button {
+    margin-right: 2%; /* İstediğin kadar bir sağ mesafe ekleyebilirsin */
+}
+
+.btn {
+    /* --bs-btn-padding-x: 0.75rem; */
+    /* --bs-btn-padding-y: 0.375rem; */
+    --bs-btn-font-size: 1rem !important;
+    --bs-btn-font-weight: 250 !important;
+    --bs-btn-line-height: 1 !important;
+    --bs-btn-color: var(--bs-body-color);
+    --bs-btn-bg: transparent;
+    --bs-btn-border-width: var(--bs-border-width);
+    --bs-btn-border-color: transparent;
+    --bs-btn-border-radius: var(--bs-border-radius);
+    --bs-btn-hover-border-color: transparent;
+    --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 1px rgba(0, 0, 0, 0.075);
+    --bs-btn-disabled-opacity: 0.65;
+    --bs-btn-focus-box-shadow: 0 0 0 0.2rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
+    display: inline-block;
+    font-family: var(--bs-btn-font-family);
+    font-size: 0.875rem !important;
+	padding: 0.25rem 0.5rem !important;
+    font-weight: var(--bs-btn-font-weight);
+    line-height: var(--bs-btn-line-height);
+    color: var(--bs-btn-color);
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+    border-radius: var(--bs-btn-border-radius);
+    background-color: var(--bs-btn-bg);
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	white-space: nowrap !important;
+}
+
+.cardy.settings-clicked {
+	border: 3px solid #07ff72;
+}
+
+.cardy.remove-friend-clicked {
+	border: 3px solid #e20000;
+}
+
+.cardy.match-request-from-profile {
+	border: 3px solid #5D1D88;
+} 
